--- a/P009118.opf/layers/v001/Pagination.yml
+++ b/P009118.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6e5ec457dbf049be96ca22a7139ffbbb
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   83d8ac31d99c44e2aefc1b26530e9946:
