--- a/P009118.opf/meta.yml
+++ b/P009118.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009118
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:23:51.108029
 source_metadata:
   id: bdr:W4CZ294450
   title: 'ཀློང་སྙིང་ཇོ་ལུགས་སྒྲོལ་དཀར་གྱི་སྐོར་ཆོག་བསྒྲིགས།
@@ -15,3 +15,5 @@ source_metadata:
       volume_number: 1
       total_pages: 210
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
